// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gux-form-field-radio-group-beta #render should render basic radio group as expected 1`] = `
<gux-form-field-radio-group-beta>
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above">
      <legend class="gux-form-field-screenreader-label">
        Food
      </legend>
      <div class="gux-form-field-visual-label gux-above" role="presentation">
        <slot name="group-label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="group-label-info">
        </slot>
      </div>
      <slot>
      </slot>
      <div role="alert" class="gux-form-field-error">
        <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
        </gux-icon>
        <div class="gux-message">
          <slot name="group-error">
          </slot>
        </div>
      </div>
      <div class="gux-form-field-help">
        <div class="gux-message">
          <slot name="group-help">
          </slot>
        </div>
      </div>
    </fieldset>
  </template>
  <label slot="group-label">
    Food
  </label>
  <gux-form-field-radio>
    <input slot="input" type="radio" name="food-1" value="pizza">
    <label slot="label">
      Pizza
    </label>
  </gux-form-field-radio>
  <gux-form-field-radio>
    <input slot="input" type="radio" name="food-1" value="pasta">
    <label slot="label">
      Pasta
    </label>
  </gux-form-field-radio>
</gux-form-field-radio-group-beta>
`;

exports[`gux-form-field-radio-group-beta #render should render complex radio group with mixed states as expected 1`] = `
<gux-form-field-radio-group-beta>
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above">
      <legend class="gux-form-field-screenreader-label">
        Food This is a group help message
      </legend>
      <div class="gux-form-field-visual-label gux-above" role="presentation">
        <slot name="group-label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="group-label-info">
        </slot>
      </div>
      <slot>
      </slot>
      <div role="alert" class="gux-form-field-error">
        <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
        </gux-icon>
        <div class="gux-message">
          <slot name="group-error">
          </slot>
        </div>
      </div>
      <div class="gux-form-field-help gux-show">
        <div class="gux-message">
          <slot name="group-help">
          </slot>
        </div>
      </div>
    </fieldset>
  </template>
  <label slot="group-label">
    Food
  </label>
  <gux-form-field-radio>
    <input slot="input" type="radio" name="food-1" value="pizza">
    <label slot="label">
      Pizza
    </label>
  </gux-form-field-radio>
  <gux-form-field-radio>
    <input slot="input" type="radio" name="food-1" value="sandwich" disabled="">
    <label slot="label">
      Sandwich
    </label>
  </gux-form-field-radio>
  <gux-form-field-radio>
    <input slot="input" type="radio" name="food-1" value="sushi">
    <label slot="label">
      Sushi
    </label>
    <span slot="error">
      Subject to availability
    </span>
  </gux-form-field-radio>
  <gux-form-field-radio>
    <input slot="input" type="radio" name="food-1" value="spaghetti">
    <label slot="label">
      Spaghetti
    </label>
    <span slot="help">
      This is a help message
    </span>
  </gux-form-field-radio>
  <span slot="group-help">
    This is a group help message
  </span>
</gux-form-field-radio-group-beta>
`;

exports[`gux-form-field-radio-group-beta #render should render radio group as expected when "group-error" slot is provided 1`] = `
<gux-form-field-radio-group-beta>
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above">
      <legend class="gux-form-field-screenreader-label">
        Food Subject to availability
      </legend>
      <div class="gux-form-field-visual-label gux-above" role="presentation">
        <slot name="group-label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="group-label-info">
        </slot>
      </div>
      <slot>
      </slot>
      <div role="alert" class="gux-form-field-error gux-show">
        <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
        </gux-icon>
        <div class="gux-message">
          <slot name="group-error">
          </slot>
        </div>
      </div>
      <div class="gux-form-field-help">
        <div class="gux-message">
          <slot name="group-help">
          </slot>
        </div>
      </div>
    </fieldset>
  </template>
  <label slot="group-label">
    Food
  </label>
  <gux-form-field-radio>
    <input slot="input" type="radio" name="food-1" value="pizza">
    <label slot="label">
      Pizza
    </label>
  </gux-form-field-radio>
  <gux-form-field-radio>
    <input slot="input" type="radio" name="food-1" value="pasta">
    <label slot="label">
      Pasta
    </label>
  </gux-form-field-radio>
  <span slot="group-error">
    Subject to availability
  </span>
</gux-form-field-radio-group-beta>
`;

exports[`gux-form-field-radio-group-beta #render should render radio group as expected when "group-help" slot is provided 1`] = `
<gux-form-field-radio-group-beta>
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above">
      <legend class="gux-form-field-screenreader-label">
        Food This is a group help message
      </legend>
      <div class="gux-form-field-visual-label gux-above" role="presentation">
        <slot name="group-label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="group-label-info">
        </slot>
      </div>
      <slot>
      </slot>
      <div role="alert" class="gux-form-field-error">
        <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
        </gux-icon>
        <div class="gux-message">
          <slot name="group-error">
          </slot>
        </div>
      </div>
      <div class="gux-form-field-help gux-show">
        <div class="gux-message">
          <slot name="group-help">
          </slot>
        </div>
      </div>
    </fieldset>
  </template>
  <label slot="group-label">
    Food
  </label>
  <gux-form-field-radio>
    <input slot="input" type="radio" name="food-1" value="pizza">
    <label slot="label">
      Pizza
    </label>
  </gux-form-field-radio>
  <gux-form-field-radio>
    <input slot="input" type="radio" name="food-1" value="pasta">
    <label slot="label">
      Pasta
    </label>
  </gux-form-field-radio>
  <span slot="group-help">
    This is a group help message
  </span>
</gux-form-field-radio-group-beta>
`;

exports[`gux-form-field-radio-group-beta #render should render radio group as expected when disabled 1`] = `
<gux-form-field-radio-group-beta disabled="">
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above" aria-disabled="true">
      <legend class="gux-form-field-screenreader-label">
        Food
      </legend>
      <div class="gux-form-field-visual-label gux-above" role="presentation">
        <slot name="group-label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="group-label-info">
        </slot>
      </div>
      <slot>
      </slot>
      <div role="alert" class="gux-form-field-error">
        <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
        </gux-icon>
        <div class="gux-message">
          <slot name="group-error">
          </slot>
        </div>
      </div>
      <div class="gux-form-field-help">
        <div class="gux-message">
          <slot name="group-help">
          </slot>
        </div>
      </div>
    </fieldset>
  </template>
  <label slot="group-label">
    Food
  </label>
  <gux-form-field-radio>
    <input slot="input" type="radio" name="food-1" value="pizza">
    <label slot="label">
      Pizza
    </label>
  </gux-form-field-radio>
  <gux-form-field-radio>
    <input slot="input" type="radio" name="food-1" value="pasta">
    <label slot="label">
      Pasta
    </label>
  </gux-form-field-radio>
</gux-form-field-radio-group-beta>
`;

exports[`gux-form-field-radio-group-beta #render should render radio group as expected when required 1`] = `
<gux-form-field-radio-group-beta required="">
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above">
      <legend class="gux-form-field-screenreader-label">
        Food Required
      </legend>
      <div class="gux-form-field-visual-label gux-above gux-required" role="presentation">
        <slot name="group-label">
        </slot>
        <gux-form-field-label-indicator variant="required" required="">
        </gux-form-field-label-indicator>
        <slot name="group-label-info">
        </slot>
      </div>
      <slot>
      </slot>
      <div role="alert" class="gux-form-field-error">
        <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
        </gux-icon>
        <div class="gux-message">
          <slot name="group-error">
          </slot>
        </div>
      </div>
      <div class="gux-form-field-help">
        <div class="gux-message">
          <slot name="group-help">
          </slot>
        </div>
      </div>
    </fieldset>
  </template>
  <label slot="group-label">
    Food
  </label>
  <gux-form-field-radio>
    <input slot="input" type="radio" name="food-1" value="pizza">
    <label slot="label">
      Pizza
    </label>
  </gux-form-field-radio>
  <gux-form-field-radio>
    <input slot="input" type="radio" name="food-1" value="pasta">
    <label slot="label">
      Pasta
    </label>
  </gux-form-field-radio>
</gux-form-field-radio-group-beta>
`;

exports[`gux-form-field-radio-group-beta #render should render radio group as expected when with optional indicator mark 1`] = `
<gux-form-field-radio-group-beta indicator-mark="optional">
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above">
      <legend class="gux-form-field-screenreader-label">
        Food
      </legend>
      <div class="gux-form-field-visual-label gux-above" role="presentation">
        <slot name="group-label">
        </slot>
        <gux-form-field-label-indicator variant="optional">
        </gux-form-field-label-indicator>
        <slot name="group-label-info">
        </slot>
      </div>
      <slot>
      </slot>
      <div role="alert" class="gux-form-field-error">
        <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
        </gux-icon>
        <div class="gux-message">
          <slot name="group-error">
          </slot>
        </div>
      </div>
      <div class="gux-form-field-help">
        <div class="gux-message">
          <slot name="group-help">
          </slot>
        </div>
      </div>
    </fieldset>
  </template>
  <label slot="group-label">
    Food
  </label>
  <gux-form-field-radio>
    <input slot="input" type="radio" name="food-1" value="pizza">
    <label slot="label">
      Pizza
    </label>
  </gux-form-field-radio>
  <gux-form-field-radio>
    <input slot="input" type="radio" name="food-1" value="pasta">
    <label slot="label">
      Pasta
    </label>
  </gux-form-field-radio>
</gux-form-field-radio-group-beta>
`;
